버전 업데이트 및 로컬 내에선 연결확인